[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pysigrok-decoder-xspiflash"
authors = [{name = "Scott Shawcroft", email = "scott@tannewt.org"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pysigrok >= 0.4.0"
]
requires-python = ">=3.7"

[project.urls]
Home = "https://github.com/pysigrok/decoder-xspiflash"

[tool.flit.module]
name = "pysigrok_xspiflash"

[project.entry-points."pysigrok.decoders"]
xspiflash = "pysigrok_xspiflash:Decoder"
